<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.starwarsquizz.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:padding="@dimen/ScreenPadding"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants">

    <ImageView
        android:id="@+id/saber_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/lightsaber_red"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@id/saber_top"
        android:fillViewport="true"
        android:layout_marginBottom="@dimen/FiftyFiveDP">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sith_question_1"
                android:textColor="@android:color/white"
                android:background="@color/sith_question_background"
                style="@style/QuestionsStyle"/>

            <RadioGroup
                android:id="@+id/sith_question_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/sith_question_one_answer_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_4_1"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/sith_question_one_answer_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_4_2"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/sith_question_one_answer_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_4_3"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/sith_question_one_answer_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_4_4"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sith_question_2"
                android:layout_marginTop="@dimen/SixteenDP"
                android:background="@color/sith_question_background"
                style="@style/QuestionsStyle"/>


                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/sith_question_two_answer_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_2_1"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/sith_question_two_answer_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_2_2"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/sith_question_two_answer_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_2_3"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/sith_question_two_answer_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_2_4"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sith_question_3"
                android:layout_marginTop="@dimen/SixteenDP"
                android:background="@color/sith_question_background"
                style="@style/QuestionsStyle"/>

            <RadioGroup
                android:id="@+id/sith_question_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/sith_question_three_answer_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_3_1"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/sith_question_three_answer_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_3_2"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/sith_question_three_answer_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_3_3"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/sith_question_three_answer_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_3_4"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sith_question_4"
                android:layout_marginTop="@dimen/SixteenDP"
                android:background="@color/sith_question_background"
                style="@style/QuestionsStyle" />

            <EditText
                android:id="@+id/sith_answer_question_four"
                android:layout_width="@dimen/EditTextWidth"
                android:layout_height="@dimen/EditTextHeight"
                android:layout_marginTop="@dimen/EditTextMarginTop"
                android:layout_marginLeft="@dimen/FourtyDP"
                android:layout_marginStart="@dimen/FourtyDP"
                android:paddingLeft="@dimen/EditTextPadding"
                android:paddingStart="@dimen/EditTextPadding"
                android:paddingRight="@dimen/EditTextPadding"
                android:paddingEnd="@dimen/EditTextPadding"
                android:background="@drawable/sith_textbox"
                android:textColor="@android:color/white"
                android:inputType="text"
                android:textSize="@dimen/QuestionFontSize"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:imeOptions="actionDone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sith_question_5"
                android:layout_marginTop="@dimen/SixteenDP"
                android:background="@color/sith_question_background"
                style="@style/QuestionsStyle"/>

            <RadioGroup
                android:id="@+id/sith_question_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/sith_question_five_answer_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_5_1"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/sith_question_five_answer_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_5_2"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/sith_question_five_answer_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_5_3"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/sith_question_five_answer_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sith_answer_5_4"
                    style="@style/AnswersStyle"
                    app:buttonTint="@color/sith_red"/>

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/FiftyDP"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/FourtyDP"
            android:background="@drawable/button_border"
            android:textColor="@color/yellow"
            android:layout_gravity="center_vertical"
            android:text="@string/go_back"
            android:onClick="goBack"/>

        <TextView
            android:id="@+id/progress"
            android:layout_width="0dp"
            android:layout_height="@dimen/TwentyDP"
            android:textColor="@color/yellow"
            android:textSize="@dimen/AnswerFontSize"
            android:text="@string/number_of_marked_questions"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/Fifteen"/>

        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/FourtyDP"
            android:background="@drawable/button_border"
            android:textColor="@color/yellow"
            android:layout_gravity="center_vertical"
            android:text="@string/done"
            android:onClick="finish"/>

    </LinearLayout>

</RelativeLayout>



